--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
     <div class="carousel-item active">
       <div class="container">
         <img src="imagenes/cliente1.svg" class="testimonio-imagen rounded-circle" alt="foto de gino">
-        <p class=""testimonio-texto> asaksjaksjaks kaskajskajsklajs jskdklasdj kaakjaksaks jaakjs</p>
+        <p class=""testimonio-texto> saksjaksjaks kaskajskajsklajs jskdklasdj kaakjaksaks jaakjs</p>
         <div class="testimonio-info">
           <p class="cliente">Gino</p>
           <p class="cargo">Gerente de Proyectos en Desarrollo Web</p>
